--- a/Underground.css
+++ b/Underground.css
@@ -290,7 +290,9 @@ main {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
     pointer-events: none;
+    display: block;
 }
 
 .spreads-grid {
